<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context="org.ramferno.ramfernoscouting2017.fragments.ScoutDataEditorFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/view_data_button_layout"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">
        <Button
            android:id="@+id/team_data_back_button"
            android:text="@string/back_button"
            android:elevation="10dp"
            android:textColor="#fff"
            android:clickable="true"
            android:layout_weight="0.5"
            android:foreground="?android:attr/selectableItemBackground"
            android:background="@color/colorPrimary"
            android:layout_height="60sp"
            android:layout_width="fill_parent" />
        <TextView
            android:layout_width="fill_parent"
            android:background="@color/colorPrimaryDark"
            android:layout_weight="0.99"
            android:layout_height="match_parent"/>
        <Button
            android:text="@string/add_button"
            android:elevation="10dp"
            android:textColor="#fff"
            android:clickable="true"
            android:layout_weight="0.5"
            android:foreground="?android:attr/selectableItemBackground"
            android:background="@color/colorPrimary"
            android:layout_height="60sp"
            android:id="@+id/team_data_add_button"
            android:layout_width="fill_parent" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/view_data_button_layout"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/scout_data_fragment_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_centerHorizontal="true"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/scout_data_fragment_title"
                android:textAllCaps="true" />
            <TextView
                android:id="@+id/team_number_scout_title"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/scout_data_fragment_title"
                android:layout_centerHorizontal="true"
                android:textSize="15sp"
                android:textStyle="bold"
                android:text="@string/scout_team_number" />
            <EditText
                android:id="@+id/team_number_scout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textAlignment="center"
                android:hint="@string/scout_team_number_hint"
                android:layout_below="@id/team_number_scout_title"
                android:layout_centerHorizontal="true"
                android:textSize="15sp"
                android:text="" />
            <TextView
                android:id="@+id/team_name_scout_title"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/team_number_scout"
                android:layout_centerHorizontal="true"
                android:textSize="15sp"
                android:textStyle="bold"
                android:text="@string/scout_team_name" />
            <EditText
                android:id="@+id/team_name_scout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/scout_team_name_hint"
                android:layout_below="@id/team_name_scout_title"
                android:layout_centerHorizontal="true"
                android:textSize="15sp"
                android:textAlignment="center"
                android:text="" />
            <TextView
                android:id="@+id/scout_autonomous_title"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/team_name_scout"
                android:layout_centerHorizontal="true"
                android:textSize="15sp"
                android:textStyle="bold"
                android:text="@string/autonomous_title" />
            <LinearLayout
                android:layout_width="match_parent"
                android:id="@+id/scout_layout_1"
                android:layout_below="@id/scout_autonomous_title"
                android:layout_height="match_parent">
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:textSize="15sp"
                    android:text="@string/scout_fuel_low"
                    android:layout_marginEnd="5dp"
                    android:textAlignment="textEnd"
                    android:layout_width="fill_parent" />
                <CheckBox
                    android:layout_width="fill_parent"
                    android:layout_weight="1"
                    android:id="@+id/scout_auto_fuel_low"
                    android:buttonTint="@color/colorPrimary"
                    android:layout_marginStart="5dp"
                    android:gravity="center"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:id="@+id/scout_layout_2"
                android:layout_below="@id/scout_layout_1"
                android:layout_height="match_parent">
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:textSize="15sp"
                    android:text="@string/scout_fuel_high"
                    android:layout_marginEnd="5dp"
                    android:textAlignment="textEnd"
                    android:layout_width="fill_parent" />
                <CheckBox
                    android:layout_width="fill_parent"
                    android:layout_weight="1"
                    android:id="@+id/scout_auto_fuel_high"
                    android:buttonTint="@color/colorPrimary"
                    android:layout_marginStart="5dp"
                    android:gravity="center"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:id="@+id/scout_layout_3"
                android:layout_below="@id/scout_layout_2"
                android:layout_height="match_parent">
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:textSize="15sp"
                    android:text="@string/scout_fuel_points"
                    android:layout_marginEnd="5dp"
                    android:textAlignment="textEnd"
                    android:layout_width="fill_parent" />
                <EditText
                    android:id="@+id/scout_auto_fuel_points"
                    android:layout_weight="1"
                    android:inputType="number"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/scout_fuel_points_hint"
                    android:textSize="15sp"
                    android:text="" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:id="@+id/scout_layout_4"
                android:layout_below="@id/scout_layout_3"
                android:layout_height="match_parent">
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:textSize="15sp"
                    android:text="@string/scout_rotor_engaged"
                    android:layout_marginEnd="5dp"
                    android:textAlignment="textEnd"
                    android:layout_width="fill_parent" />
                <CheckBox
                    android:layout_width="fill_parent"
                    android:id="@+id/scout_auto_rotor_engaged"
                    android:buttonTint="@color/colorPrimary"
                    android:layout_weight="1"
                    android:layout_marginStart="5dp"
                    android:gravity="center"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <TextView
                android:id="@+id/scout_teleoperated_title"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/scout_layout_4"
                android:layout_centerHorizontal="true"
                android:textSize="15sp"
                android:textStyle="bold"
                android:text="@string/teleop_title" />
            <LinearLayout
                android:layout_width="match_parent"
                android:id="@+id/scout_layout_5"
                android:layout_below="@id/scout_teleoperated_title"
                android:layout_height="match_parent">
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:textSize="15sp"
                    android:text="@string/scout_fuel_low"
                    android:layout_marginEnd="5dp"
                    android:textAlignment="textEnd"
                    android:layout_width="fill_parent" />
                <CheckBox
                    android:layout_width="fill_parent"
                    android:layout_weight="1"
                    android:id="@+id/scout_tele_fuel_low"
                    android:buttonTint="@color/colorPrimary"
                    android:layout_marginStart="5dp"
                    android:gravity="center"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:id="@+id/scout_layout_6"
                android:layout_below="@id/scout_layout_5"
                android:layout_height="match_parent">
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:textSize="15sp"
                    android:text="@string/scout_fuel_high"
                    android:layout_marginEnd="5dp"
                    android:textAlignment="textEnd"
                    android:layout_width="fill_parent" />
                <CheckBox
                    android:layout_width="fill_parent"
                    android:layout_weight="1"
                    android:id="@+id/scout_tele_fuel_high"
                    android:buttonTint="@color/colorPrimary"
                    android:layout_marginStart="5dp"
                    android:gravity="center"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:id="@+id/scout_layout_7"
                android:layout_below="@id/scout_layout_6"
                android:layout_height="match_parent">
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:textSize="15sp"
                    android:text="@string/scout_fuel_points"
                    android:layout_marginEnd="5dp"
                    android:textAlignment="textEnd"
                    android:layout_width="fill_parent" />
                <EditText
                    android:id="@+id/scout_tele_fuel_points"
                    android:layout_weight="1"
                    android:inputType="number"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/scout_fuel_points_hint"
                    android:textSize="15sp"
                    android:text="" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:id="@+id/scout_layout_8"
                android:layout_below="@id/scout_layout_7"
                android:layout_height="match_parent">
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:textSize="15sp"
                    android:text="@string/scout_rotor_engaged"
                    android:layout_marginEnd="5dp"
                    android:textAlignment="textEnd"
                    android:layout_width="fill_parent" />
                <CheckBox
                    android:layout_width="fill_parent"
                    android:id="@+id/scout_tele_rotor_engaged"
                    android:buttonTint="@color/colorPrimary"
                    android:layout_weight="1"
                    android:layout_marginStart="5dp"
                    android:gravity="center"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:id="@+id/scout_layout_9"
                android:layout_below="@id/scout_layout_8"
                android:layout_height="match_parent">
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:textSize="15sp"
                    android:text="@string/scout_endgame"
                    android:layout_marginEnd="5dp"
                    android:textAlignment="textEnd"
                    android:layout_width="fill_parent" />
                <CheckBox
                    android:layout_width="fill_parent"
                    android:id="@+id/scout_tele_endgame"
                    android:buttonTint="@color/colorPrimary"
                    android:layout_weight="1"
                    android:layout_marginStart="5dp"
                    android:gravity="center"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <TextView
                android:id="@+id/scout_misc_title"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/scout_layout_9"
                android:layout_centerHorizontal="true"
                android:textSize="15sp"
                android:textStyle="bold"
                android:text="@string/miscellaneous_title" />
            <LinearLayout
                android:layout_width="match_parent"
                android:id="@+id/scout_layout_10"
                android:layout_below="@id/scout_misc_title"
                android:layout_height="match_parent">
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:textSize="15sp"
                    android:text="@string/scout_play_style"
                    android:layout_marginEnd="5dp"
                    android:textAlignment="textEnd"
                    android:layout_width="fill_parent" />
                <EditText
                    android:id="@+id/scout_play_style"
                    android:layout_weight="1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/scout_play_style_hint"
                    android:textSize="15sp"
                    android:text="" />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
